# paper_alpha_agent

./: .env.example  .gitignore  README.md  pyproject.toml
config/: prompts.yaml  settings.yaml  topics.yaml
paper_alpha_agent/: __init__.py
src/paper_alpha_agent/: __init__.py  cli.py  config.py  main.py
src/paper_alpha_agent/llm/: __init__.py  client.py  prompts.py  schemas.py
src/paper_alpha_agent/models/: __init__.py  backtest.py  idea.py  paper.py  report.py
src/paper_alpha_agent/orchestration/: pipeline.py  stages.py
src/paper_alpha_agent/research/: __init__.py  discovery.py  evaluation.py  idea_extraction.py  prior_art.py  prototype_builder.py  ranking.py
src/paper_alpha_agent/tools/: __init__.py  arxiv_client.py  backtest_runner.py  market_data_client.py  report_writer.py  semantic_scholar_client.py  storage.py  topic_summary_email_writer.py
tests/: test_arxiv_client.py  test_config.py  test_pipeline.py  test_ranking.py  test_ranking_prefilter.py  test_report_generation.py  test_summarization.py
