[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper_alpha_agent"
version = "0.1.0"
description = "Bounded research pipeline for ML finance paper discovery, idea extraction, and toy backtesting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "openai>=1.51.0",
  "pandas>=2.2.0",
  "pypdf>=5.1.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
vectorbt = [
  "vectorbt>=0.26.0",
]

[project.scripts]
paper-alpha-agent = "paper_alpha_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
